<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">a09-blauzahn</string>
    <string name="tvLog">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="btConnect">connect/scan</string>
    <string name="btDisconnect">disconnect</string>
    <string name="btRefresh">refresh</string>
    <string name="btShowNetInfo">netInfo</string>
    <string name="btResetDb">reset db</string>
    <string name="btCloseListSightingComplete">close this list view</string>
    <string name="btShowBtSightings">btSightings</string>
    <string name="btShowBtDevices">btDevices</string>
    <string name="btShowBtSessions">btSessions</string>
    <string name="cbBtAuto">background bt scan</string>
    <string name="cbWifiAuto">background wifi scan</string>
    <string name="cbWifi">wifi</string>
    <string name="btExport">export</string>
    <string name="btExit">exit</string>
    <string name="btExportYes">yes</string>
    <string name="btExportNo">no, cancel the export</string>
    <string name="tvExportConfirmation">This will dump the entire database to the SD card using the file name you enter below, automatically adding a timestamp and the suffix .sqlite, do you wish to proceed?</string>
    <string name="etExportTargetHint">enter target file name here</string>
    <string name="dialogExitMessage">This will close the application. If background scanning was enabled, it will be stopped as well. Do you really wish to leave?</string>
    <string name="dialogExitTitle">Exit Confirmation</string>
    <string name="dialogExitYes">yes, please</string>
    <string name="dialogExitNo">no, not yet</string>
    <string name="labelListBTDevices">List of recently discovered unique bluetooth devices in decending order of their number of total occurrences.</string>
    <string name="labelListBTDevicesSession">List of unique bluetooth devices discovered during session #%d in decending order of their number of total occurrences.</string>
    <string name="labelListWifiDevicesSession">List of unique wifi devices discovered during session #%d in decending order of their number of total occurrences.</string>
    <string name="labelListBTSessions">List of recently conducted bluetooth sessions with the most recent ones on top.</string>
    <string name="labelListBTSessionsDevice">List of bluetooth sessions containing device address [%s] with the most recent sessions ones on top.</string>
    <string name="labelListWifiSessionsDevice">List of wifi sessions containing device address [%s] with the most recent sessions ones on top.</string>
    <string name="labelListBTSightings">List of recently recorded bluetooth sightings in chronological order.</string>
    <string name="labelListBTSightingsSession">List of recorded bluetooth sightings during session #%d in chronological order.</string>
    <string name="labelListWifiSightingsSession">List of recorded wifi sightings during session #%d in chronological order.</string>
    <string name="labelListBTSightingsDevice">List of recently recorded sightings of bluetooth device address [%s] in chronological order.</string>
    <string name="labelListWifiSightingsDevice">List of recently recorded sightings of wifi device address [%s] in chronological order.</string>
    <string name="labelListWifiSightings">List of recently recorded wifi sightings in chronological order.</string>
    <string name="labelListWifiSessions">List of recently conducted wifi sessions with the most recent ones on top.</string>
    <string name="labelListWifiDevices">List of recently discovered unique wifi devices in decending order of their number of total occurrences</string>
    <string name="btBTDeviceSightings">list all sightings of this device</string>
    <string name="btBTDeviceSessions">list the sessions containing this device</string>
    <string name="btBTDevicePairing">try pairing with this device</string>
    <string name="btBTDeviceExit">exit, doing nothing</string>
    <string name="btBTSessionDevices">list the devices found during this session</string>
    <string name="btBTSessionSightings">show the sightings from this session</string>
    <string name="btSightingSessions">list sessions with sightings of this device</string>
    <string name="btBTSightingSightings">list other sightings of this device</string>
    <string name="btCalendar">calendar</string>
    <string name="title_activity_activity_calendar">ActivityCalendar</string>
    <string name="tvCalendarLabel">Choose a new time and date to set system wide. This will update all time related database columns. Sadly, this app cannot change the system clock, so you will have to do that yourself.</string>
    <string name="tvCalendarDifference">%s milliseconds will be added to all time columns.</string>
    <string name="btCalendarOkay">okay</string>
    <string name="btCalendarCancel">no, cancel</string>
    <string name="cbBt">bluetooth</string>
    <string name="cbEnableResetDb">enable database reset</string>
    <string name="btShowWifiSightings">wifiSightings</string>
    <string name="btShowWifiDevices">wifiDevices</string>
    <string name="btShowWifiSessions">wifiSessions</string>

</resources>
