<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a09_blauzahn.ActivityMain" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cbWifi"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:height="32dp"
            android:text="@string/cbWifi"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cbWifiAuto"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/cbWifiAuto"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <CheckBox
            android:id="@+id/cbBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbBt"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cbBtAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbBtAuto"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btConnect"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btConnect"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btDisconnect"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btDisconnect"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btRefresh"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btRefresh"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btResetDb"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btResetDb"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btExit"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btExit"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btShowBtSightings"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btShowBtSightings"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btShowBtDevices"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btShowBtDevices"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btShowBtSessions"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btShowBtSessions"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btExport"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btExport"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btCalendar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:height="24dp"
                android:padding="6dp"
                android:text="@string/btCalendar"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btShowWifiSightings"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/btShowWifiSightings"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btShowWifiDevices"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/btShowWifiDevices"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btShowWifiSessions"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/btShowWifiSessions"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLog"
            android:textSize="10sp" />
    </ScrollView>

</LinearLayout>