<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvBTDeviceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btBTDeviceSightings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBTDeviceSightings" />

    <Button
        android:id="@+id/btBTDeviceSessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBTDeviceSessions" />

    <Button
        android:id="@+id/btBTSightingPairing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBTDevicePairing" />

    <Button
        android:id="@+id/btBTDeviceExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btBTDeviceExit" />

</LinearLayout>
