<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvExportConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvExportConfirmation" />

    <EditText
        android:id="@+id/etExportTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/etExportTargetHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btExportYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btExportYes" />

        <Button
            android:id="@+id/btExportNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btExportNo" />

    </LinearLayout>

</LinearLayout>
