<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a09_blauzahn.ActivityCalendar" >

    <TextView
        android:id="@+id/tvCalendarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/tvCalendarLabel" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp" />

    <TextView
        android:id="@+id/tvCalendarDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvCalendarDifference" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btCalendarOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btCalendarOkay" />

        <Button
            android:id="@+id/btCalendarCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btCalendarCancel" />

    </LinearLayout>

</LinearLayout>