<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvBTSessionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="TextView"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btBTSessionDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btBTSessionDevices" />

        <Button
            android:id="@+id/btBTSessionSightings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btBTSessionSightings" />

        <Button
            android:id="@+id/btBTSessionExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btBTDeviceExit" />
    </LinearLayout>

</ScrollView>
